# nntp2sql

./: README  README.md
fsit/: Makefile.am  config.h.in  configure  configure.ac  main.m
fsit/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
man/: nntp2sql.1
nntp2sql/: Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~  main.c
nntp2sql/.deps/: nntp2sql-main.Po
nntp2sql/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
nntp2sql/gui/: viewer.c
nntp2sql/gui/.deps/: isotope_viewer-viewer.Po
nntp2sql/man/: nntp2sql.1
nntp2sql/src/: db.c  db.h  db_postgres.c  export_html.c  export_html.h  logging.c  logging.h  nntp.c  nntp.h
nntp2sql/src/.deps/: nntp2sql-export_html.Po
